# The-Co-Pilots

./: CMakeLists.txt  food_aid.sql  food_sharing.db  main.cpp  mainmainwindow.cpp  mydata.db
foodappproject/: CMakeLists.txt  database.cpp  database.h  delivery.cpp  delivery.h  main.cpp  mainwindow.cpp  mainwindow.h  org.cpp  org.h  people.cpp  people.h
foodappproject/map/: map.html  server  server.cpp
map/: map.html  server  server.cpp
